docs/tests/nameres/custom_types/valid/StructEnum.src
// Valid

struct str {
    enum COLOR {
        BLUE, RED, GREEN
    };
}