docs/tests/nameres/custom_types/invalid/EnumDupe.src
// Invalid

enum DUPE {
    one, two, two
};